--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.1.2",
     "file-loader": "^1.1.11",
     "image-webpack-loader": "^4.3.1",
+    "lodash": "^4.17.10",
     "mongoose": "^5.2.4",
     "react": "^15.6.2",
     "react-addons-update": "^15.6.2",
